syntax = "proto3";
package user;
service UserService {
  rpc RegisterUser (UserRequest) returns (UserResponse) {}
  rpc FindUser (UserRequest) returns (UserResponse) {}
  rpc DeleteUser (UserRequest) returns (UserResponse) {}
}
message UserRequest {
  string id = 1;
  string name = 2;
}
message UserResponse {
  int32 code = 1;
  string msg = 2;
}